remove overflow to avoid scroll blocking

--- a/themes/colibri/assets/sass/partials/_base.scss
+++ b/themes/colibri/assets/sass/partials/_base.scss
@@ -8,7 +8,6 @@ html, body {
     font-weight:200;
     position:relative;
     color:$text-color;
-    overflow-x:hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
