--- a/themes/colibri/assets/sass/partials/_home.scss
+++ b/themes/colibri/assets/sass/partials/_home.scss
@@ -4,11 +4,12 @@
 
 .colibri-wrapper {
     position: absolute;
-    top: 20px;
-    right: $su;
+    top: 0;
+    right: 0;
     bottom:0;
     z-index: -1;
     width: 100%;
+    overflow: hidden;
 }
 
 .colibri-img {
